--- a/lectures.html
+++ b/lectures.html
@@ -25,7 +25,7 @@
                     </a>
                     <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                         <li>
-                            <a href="/" class="nav-link text-white">
+                            <a href="index.html" class="nav-link text-white">
                                 <svg class="bi d-block mx-auto mb-1" xmlns="http://www.w3.org/2000/svg" width="24"
                                     height="24" fill="currentColor" class="bi bi-house-door" viewBox="0 0 16 16">
                                     <path
