--- a/lectures.html
+++ b/lectures.html
@@ -92,22 +92,20 @@
         </div>
     </header>
 
-
-
     <div class="container">
         <div class="row article-row">
             <div class="col-md-3">
                 <article class="article">
                     <h3>Лекция 1</h3>
                     <p>Курс экологии, цель, задача, структура и история</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
             </div>
             <div class="col-md-3">
                 <article class="article">
                     <h3>Лекция 2</h3>
                     <p>Учение о биосфере</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -115,7 +113,7 @@
                 <article class="article">
                     <h3>Лекция 3</h3>
                     <p>Экология экосистем</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -123,7 +121,7 @@
                 <article class="article">
                     <h3>Лекция 4</h3>
                     <p>Факторы окружающей среды и их классификация </p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -131,7 +129,7 @@
                 <article class="article">
                     <h3>Лекция 5</h3>
                     <p>Атмосфера и ее защита</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -139,7 +137,7 @@
                 <article class="article">
                     <h3>Лекция 6</h3>
                     <p>Охрана водных ресурсов</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -147,7 +145,7 @@
                 <article class="article">
                     <h3>Лекция 7</h3>
                     <p>Сохранение литосферы</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -155,7 +153,7 @@
                 <article class="article">
                     <h3>Лекция 8</h3>
                     <p>Природные ресурсы и их рациональное использование</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -164,7 +162,7 @@
                 <article class="article">
                     <h3>Лекция 9</h3>
                     <p>Загрязнение окружающей среды различными отходами</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -172,7 +170,7 @@
                 <article class="article">
                     <h3>Лекция 10</h3>
                     <p>Проблемы охраные окружающей среды в Узбекистане</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -180,7 +178,7 @@
                 <article class="article">
                     <h3>Лекция 11</h3>
                     <p>Загрязнение промышленных городов и их влияние на окружающую</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -188,7 +186,7 @@
                 <article class="article">
                     <h3>Лекция 12</h3>
                     <p>Негативное влияние трагедии Аральского моря на окружающую</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -196,7 +194,7 @@
                 <article class="article">
                     <h3>Лекция 13</h3>
                     <p>Универсальные экологические проблемы Региональные экологические</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -204,7 +202,7 @@
                 <article class="article">
                     <h3>Лекция 14</h3>
                     <p>Основные направления экологической безопасности. Экологическая экспертиза</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
@@ -212,7 +210,7 @@
                 <article class="article">
                     <h3>Лекция 15</h3>
                     <p>Сфера общения и ее влияние на окружающую среду. Экологический мониторинг</p>
-                    <a href="#" class="btn btn-dark">Читать</a>
+                    <a class="btn btn-outline-dark" href="#">Перейти</a>
                 </article>
 
             </div>
