add link to download lectures

--- a/lectures.html
+++ b/lectures.html
@@ -98,14 +98,14 @@
                 <article class="article">
                     <h3>Лекция 1</h3>
                     <p>Курс экологии, цель, задача, структура и история</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/1_лекция_Курс_экологии,_цель,_задача,_структура_и_история.docx" download>Скачать</a>
                 </article>
             </div>
             <div class="col-md-3">
                 <article class="article">
                     <h3>Лекция 2</h3>
                     <p>Учение о биосфере</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/2 лекция Учение о биосфере.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -113,7 +113,7 @@
                 <article class="article">
                     <h3>Лекция 3</h3>
                     <p>Экология экосистем</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/3 лекция Экология экосистем.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -121,7 +121,7 @@
                 <article class="article">
                     <h3>Лекция 4</h3>
                     <p>Факторы окружающей среды и их классификация </p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/4_лекция_Факторы_окружающей_среды_и_их_классификация.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -129,7 +129,7 @@
                 <article class="article">
                     <h3>Лекция 5</h3>
                     <p>Атмосфера и ее защита</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/5 лекция Атмосфера и ее защита.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -137,7 +137,7 @@
                 <article class="article">
                     <h3>Лекция 6</h3>
                     <p>Охрана водных ресурсов</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/6 лекция Охрана водных ресурсов.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -145,7 +145,7 @@
                 <article class="article">
                     <h3>Лекция 7</h3>
                     <p>Сохранение литосферы</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/7_лекция_Сохранение литосферы.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -153,7 +153,7 @@
                 <article class="article">
                     <h3>Лекция 8</h3>
                     <p>Природные ресурсы и их рациональное использование</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/8_лекция_Природные_ресурсы_и_их_рациональное_использование.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -162,7 +162,7 @@
                 <article class="article">
                     <h3>Лекция 9</h3>
                     <p>Загрязнение окружающей среды различными отходами</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/9_лекция_Загрязнение_окружающей_среды_различными_отходами.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -170,7 +170,7 @@
                 <article class="article">
                     <h3>Лекция 10</h3>
                     <p>Проблемы охраные окружающей среды в Узбекистане</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/10_лекция_Проблемы_охраны_окружающей_среды_в_Республике_Узбекистан.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -178,7 +178,7 @@
                 <article class="article">
                     <h3>Лекция 11</h3>
                     <p>Загрязнение промышленных городов и их влияние на окружающую</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/11_лекция_Загрязнение_промышленных_городов_и_их_влияние_на_окружающую.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -186,7 +186,7 @@
                 <article class="article">
                     <h3>Лекция 12</h3>
                     <p>Негативное влияние трагедии Аральского моря на окружающую</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/12_лекция_Негативное_влияние_трагедии_Аральского_моря_на_окружающую.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -194,7 +194,7 @@
                 <article class="article">
                     <h3>Лекция 13</h3>
                     <p>Универсальные экологические проблемы Региональные экологические</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/13_лекция_Универсальные_экологические_проблемы_Региональные_экологические.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -202,7 +202,7 @@
                 <article class="article">
                     <h3>Лекция 14</h3>
                     <p>Основные направления экологической безопасности. Экологическая экспертиза</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/14_лекция_Основные_направления_экологической_безопасности_Экологическая.docx" download>Скачать</a>
                 </article>
 
             </div>
@@ -210,7 +210,7 @@
                 <article class="article">
                     <h3>Лекция 15</h3>
                     <p>Сфера общения и ее влияние на окружающую среду. Экологический мониторинг</p>
-                    <a class="btn btn-outline-dark" href="#">Перейти</a>
+                    <a class="btn btn-outline-dark" href="download/lecture/15_лекция_Сфера_общения_и_ее_влияние_на_окружающую_среду_Экологический.docx" download>Скачать</a>
                 </article>
 
             </div>
