--- a/tasks.html
+++ b/tasks.html
@@ -99,7 +99,7 @@
           <article class="article">
             <h3>1 Задание</h3>
             <p>Использование минеральных ресурсов и экологические последствия преобразования недр</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 1 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -107,7 +107,7 @@
           <article class="article">
             <h3>2 Задание</h3>
             <p>Источники и важнейшие компоненты антропогенного загрязнения атмосферы</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 2 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -115,7 +115,7 @@
           <article class="article">
             <h3>3 Задание</h3>
             <p>Изучение особенностей загрязнения водотока Определение демографической емкости района застройки</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 3 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -123,7 +123,7 @@
           <article class="article">
             <h3>4 Задание</h3>
             <p>Определение степени очистки сточных вод</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 4 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -131,7 +131,7 @@
           <article class="article">
             <h3>5 Задание</h3>
             <p>Экологические проблемы использования ресурсов биосферы</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 5 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -139,7 +139,7 @@
           <article class="article">
             <h3>6 Задание</h3>
             <p>Техногенное загрязнение окружающей среды от сжигания топлива в котельных т ТЭС</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 6 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -147,7 +147,7 @@
           <article class="article">
             <h3>7 Задание</h3>
             <p>Аэрозольное загрязнение воздушной среды промышленного предприятия</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 7 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -157,7 +157,7 @@
             <p>Шумовое загрязнение окружающей среды и
               его воздействие на человека
             </p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 8 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -165,7 +165,7 @@
           <article class="article">
             <h3>9 Задание</h3>
             <p>Определение показателей полигонов твердых бытовых отходов, степень их воздействия на окружающую среду</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 9 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -173,7 +173,7 @@
           <article class="article">
             <h3>10 Задание</h3>
             <p>Экологические сообщества</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/практика 10 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -181,7 +181,7 @@
           <article class="article">
             <h3>11 Задание</h3>
             <p>Медико-биологические критерии развития организма</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/практика 11 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -189,7 +189,7 @@
           <article class="article">
             <h3>12 Задание</h3>
             <p>Взаимоотношение организма и среды. Экологические факторы</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/практика 12 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -197,7 +197,7 @@
           <article class="article">
             <h3>13 Задание</h3>
             <p>Загрязнение окружающей среды</p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/практика 13 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -206,7 +206,7 @@
             <h3>14 Задание</h3>
             <p>Экологические принципы рационального использования природных ресурсов и охраны природы
             </p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/практика 14 ЗОС.docx" download>Скачать</a>
           </article>
 
         </div>
@@ -216,7 +216,7 @@
             <p>Нормирование качества атмосферного воздуха.
               Концепция ПДК.
             </p>
-            <a class="btn btn-outline-dark" href="#">Перейти</a>
+            <a class="btn btn-outline-dark" href="download/practical-tasks/практика 15 ЗОС.docx" download>Скачать</a>
           </article>
         </div>
       </div>
