--- a/practics.html
+++ b/practics.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practics</title>
+    <title>Практика</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -142,7 +142,7 @@
                         <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                             <div class="d-flex justify-content-between">
                                 <strong class="text-gray-dark">3 Практическая</strong>
-                                <a class="btn btn-outline-dark" href="#">Перейти</a>
+                                <a class="btn btn-outline-dark" href="practics_three.html">Перейти</a>
                             </div>
                             <span class="d-block">@eduard_khon</span>
                         </div>
