--- a/practics_two.html
+++ b/practics_two.html
@@ -165,7 +165,6 @@
                     <b>C_пыль:</b> <input class="fiveFour" type="text"><br>
                     6)Совокупный объем газо-воздушной смеси выбрасываемой из одного источника: <input class="six"
                         type="text"><br>
-                       
                 </div>
                 <div class="col-md-6 offset-1">
                     7) ПДВ: <br>
@@ -195,7 +194,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
-    <script src="js/main.js"></script>
+    <script src="js/pc_two.js"></script>
 </body>
 
 </html>
