--- a/tasks.html
+++ b/tasks.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tasks</title>
+  <title>Задания</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -114,7 +114,7 @@
         <div class="col-md-3">
           <article class="article">
             <h3>3 Задание</h3>
-            <p>Изучение особенностей загрязнения водотока Определение демографической емкости района застройки</p>
+            <p>Глобальные экологические проблемы. Определение демографической емкости района застройки</p>
             <a class="btn btn-outline-dark" href="download/practical-tasks/Практика 3 ЗОС.docx" download>Скачать</a>
           </article>
 
