--- a/practics.html
+++ b/practics.html
@@ -158,7 +158,7 @@
                         <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
                             <div class="d-flex justify-content-between">
                                 <strong class="text-gray-dark">4 Практическая</strong>
-                                <a class="btn btn-outline-dark" href="#">Перейти</a>
+                                <a class="btn btn-outline-dark" href="practics_fourth.html">Перейти</a>
                             </div>
                             <span class="d-block">@eduard_khon</span>
                         </div>
